--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,4 +43,4 @@ Suggests:
     rmarkdown,
     sessioninfo
 VignetteBuilder: knitr
-biocViews: AnnotationData, Genome
+biocViews: AnnotationData, Genome, CTCF
