Add GenomeInfoDb and GenomicRanges dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,3 +44,6 @@ Suggests:
     sessioninfo
 VignetteBuilder: knitr
 biocViews: AnnotationData, Genome, CTCF
+Imports: 
+    GenomeInfoDb,
+    GenomicRanges
