--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,9 @@ Authors@R: c(
     person(given = "Stuart",
            family = "Lee",
            role = c("aut")),
+    person(given = "Tim",
+           family = "Triche",
+           role = c("aut")),
     person(given = "Douglas",
            family = "Phanstiel",
            role = c("aut")),
