--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -57,13 +57,9 @@ name: pkgdown
 
 jobs:
   pkgdown:
-    # runs-on: ubuntu-latest
-    runs-on:
-      os: ubuntu-latest
-      r: '4.2'
-      bioc: '3.16'
-      cont: "bioconductor/bioconductor_docker:devel"
-      rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"
+    runs-on: ubuntu-latest
+    # runs-on:
+    #   os: ubuntu-latest, r: '4.2', bioc: '3.16', cont: "bioconductor/bioconductor_docker:devel", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
